kubernetes/apps/default/syncthing/app/networkpolicy.yaml
---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: syncthing
#   namespace: home
# spec:
#   endpointSelector:
#     matchLabels:
#       app.kubernetes.io/name: syncthing
#   ingress:
#     - fromEntities:
#         - world
#       toPorts:
#         - ports:
#             - port: "22000"
#         - ports:
#             - port: "21027"
#     - fromEndpoints:
#         - matchLabels:
#             app.kubernetes.io/name: traefik
#             io.kubernetes.pod.namespace: networking
#       toPorts:
#         - ports:
#             - port: "8384"
#   egress:
#     - toCIDRSet:
#         - cidr: 10.0.0.0/8
#     - toCIDRSet:
#         - cidr: 100.0.0.0/8
#     - toCIDRSet:
#         - cidr: 192.168.0.0/16
#     - toEndpoints:
#         - matchLabels:
#             io.kubernetes.pod.namespace: kube-system
#             k8s-app: kube-dns
#       toPorts:
#         - ports:
#             - port: "53"
#               protocol: UDP
#           rules:
#             dns:
#               - matchPattern: "*"
# The policy specifies rules for incoming and outgoing traffic to the "syncthing" service. The "endpointSelector"
#  section selects the endpoints (pods) that the policy applies to based on their labels. In this case, the policy
#   applies to pods with the label "app.kubernetes.io/name: syncthing".

# The "ingress" section defines rules for incoming traffic. The first rule allows traffic from any source ("world")
#  to the ports 22000 and 21027. The second rule allows traffic from endpoints with labels "app.kubernetes.io/name:
#   traefik" and "io.kubernetes.pod.namespace: networking" to port 8384.

# The "egress" section defines rules for outgoing traffic. The policy allows traffic to the CIDR blocks 10.0.0.0/8,
# 100.0.0.0/8, and 192.168.0.0/16. The last rule allows traffic to endpoints with labels
# "io.kubernetes.pod.namespace: kube-system" and "k8s-app: kube-dns" on port 53 over the
# UDP protocol, and specifies a DNS match pattern of "*".

#translation to calico
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: syncthing
  namespace: default
spec:
  selector: app == "syncthing"
  ingress:
    - action: Allow
      source: {}
      destination:
        ports:
          - '22000'
          - '21027'
    - action: Allow
      source:
        selector: app == "ingress-nginx"
        namespace: default
      destination:
        ports:
          - '8384'
    - action: Log
      destination:
        ports:
          - '22000'
          - '21027'
  egress:
    - action: Allow
      destination:
        nets:
          - 10.0.0.0/8
          - 100.0.0.0/8
          - 192.168.0.0/16
    - action: Allow
      destination:
      # selector: k8s-app == "kube-dns"
        namespace: kube-system
      protocol: UDP
      ports:
        - '53'
    # DNS match pattern is not supported in Calico API v3
